versions/v0.12/modules/en/pages/how-tos-for-users/fetch-helm-oci.adoc
= Fetch Helm Charts from OCI Registries
:revdate: 2025-09-01
:page-revdate: {revdate}

{product_name} supports pulling Helm charts stored in OCI registries. OCI registries are commonly used to store and distribute container images. By using them for Helm charts, you can apply the same packaging, authentication, and distribution methods you already use for container images.

Using OCI registries for Helm charts helps you:

* Store charts alongside container images in the same registry.
* Use the same authentication and access control you already apply to container images.
* Push and pull charts using standard OCI commands, making them easy to distribute across environments.
* Manage charts in registries designed for high availability and global distribution.

For more information about HelmOps with OCI registry, refer to xref:how-tos-for-users/helm-ops.adoc#_oci_registry[HelmOps].

image::fetch-Helm-from-OCI.svg[A visual asset displaying flow of fetching Helm charts from an OCI registry]

For example, if you manage multiple clusters with {product_name}, developers can push Helm charts to an internal OCI registry. {product_name} then pulls the charts directly from the registry and deploys them to downstream clusters.  
This approach avoids maintaining a separate chart repository and reuses your existing registry infrastructure.

[#_helm_chart_in_fleet_yaml]
== Helm chart in fleet.yaml

To fetch a Helm chart, reference the chart like this in a `fleet.yaml` file:

[source,yaml]
----
helm:
  chart: "oci://ghcr.io/fleetrepoci/guestbook"
----

You can use the `version` field to reference a specific chart version:

[source,yaml]
----
helm:
  chart: "oci://ghcr.io/fleetrepoci/guestbook"
  version: 0.1.0
----

{product_name} pulls the chart from the OCI registry and deploys it to the targeted clusters.

[#_using_authenticated_registries]
== Using authenticated registries

If the OCI registry requires authentication, reference a Kubernetes secret in the GitRepo resource and set `spec.helmRepoURLRegex` to match trusted OCI registry URLs (for example `oci://ghcr\.io(/|$)`). {product_name} uses this secret to pull the chart and deploy it to the targeted clusters.

For more information, refer to xref:how-tos-for-users/gitrepo-add.adoc#_using_private_helm_repositories[fleet.yaml with authentication].
